--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car-showcase",
+  "name": "car-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,5 +19,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
